[package]
name = "rustypods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
bluez-async = "0.5.2"
futures-util = "0.3.19"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
hex = "0.4.3"
anyhow = "1.0.52"
zbus = "2.0.0"
zvariant = "3.0.0"
serde = "1.0.133"

[features]
