[package]
name = "rustypods"
description = "A service for getting info about AirPods on Linux!"
authors = ["Lucy <lucy@absolucy.moe>"]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/Absolucy/RustyPods"
keywords = ["airpods", "apple", "service", "bluetooth", "earbuds"]

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
bluez-async = "0.5.5"
futures-util = "0.3.19"
tracing = "0.1.29"
tracing-subscriber = "0.3.6"
hex = "0.4.3"
anyhow = "1.0.52"
zbus = "2.0.1"
zvariant = "3.0.0"
serde = "1.0.133"
